--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ rvm:
 - 2.1.0
 - 2.1.3
 source: rubygems
-gem "bundler"  , "~> 1.1.3"
-gem "rspec"    , "~> 2.8.0"
-gem "rake"     , "~> 0.9.2.2" #included if using rake
-task :default => [:spec]
+gem: "bundler"  
+gem: "rspec"    , "~> 2.8.0"
+gem: "rake"     #included if using rake
+task: default => [:spec]
 desc 'run Rspec specs'
-task :spec do
+task: spec do
   sh 'rspec spec'
 end
 RAILS_ENV=test
