--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,9 @@ source: rubygems
 gem: "bundler"  
 gem: "rspec"    , "~> 2.8.0"
 gem: "rake"     #included if using rake
-task: default => [:spec]
-desc 'run Rspec specs'
-task: spec do
-  sh 'rspec spec'
-end
-RAILS_ENV=test
-RACK_ENV=test
+env:
+  - DB=sqlite
+  - DB=mysql
+  - DB=postgresql
+script:
+  - RAILS_ENV=test bundle exec rake --trace db:migrate test
