--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,9 @@ rvm:
 # gem: "rspec"    , "~> 2.8.0"
 # gem: "rake"     #included if using rake
 env:
-  - DB=sqlite
-  - DB=mysql
-  - DB=postgresql
+  - DB=sqlite3
+install:
+  - bundle install --path vendor/bundle
+  - npm install
 script:
   - RAILS_ENV=test bundle exec rake --trace db:migrate test
