--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ env:
 install:
   - bundle install --path vendor/bundle
 script:
-  - RAILS_ENV=test bundle exec rake --trace db:migrate test
+  - RAILS_ENV=test bundle exec rake --trace
