setting up coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,5 @@ install:
   - bundle install --path vendor/bundle
 script:
   - RAILS_ENV=test bundle exec rake --trace
+after_success:
+- coveralls
