attempt to merge rspec/cucumber

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,12 @@ script:
   - RAILS_ENV=test bundle exec rake --trace
 after_success:
 - coveralls
+
+
+script:
+  - RAILS_ENV=test bundle exec rake db:migrate --trace
+  - bundle exec rake db:test:prepare
+  - bundle exec rspec
+  - bundle exec cucumber
+after_script:
+  - bundle exec rake send_to_codeclimate
